fix: update sltyles skeleton mobile and desktop and refactor folders

--- a/app/main/components/magazine/components/lastnews/LastNews.module.css
+++ b/app/main/components/magazine/components/lastnews/LastNews.module.css
@@ -1,3 +1,14 @@
+.skeleton {
+  display: flex;
+  gap: 8px;
+}
+
+.skeleton_item {
+  height: 12rem;
+  width: 10rem;
+  background-color: #393939;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
